--- a/server/djangoapp/templates/djangoapp/login.html
+++ b/server/djangoapp/templates/djangoapp/login.html
@@ -2,31 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Dealer Review</title>
-    {% load static %}
+    <title>Login</title>
     {% load static %}
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <!-- <link href="https://unpkg.com/bootstrap-table@1.18.2/dist/bootstrap-table.min.css" rel="stylesheet">
-    <script src="https://unpkg.com/bootstrap-table@1.18.2/dist/bootstrap-table.min.js"></script>
-    <script src="https://unpkg.com/bootstrap-table@1.18.2/dist/extensions/filter-control/bootstrap-table-filter-control.min.js"></script> -->
-
 </head>
-
 <body>
-    <!-- Navigation bar -->
+
+<!-- Navigation bar -->
     <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
             <div class="navbar-header">
-                  <a class="navbar-brand" href="#">Dealer Review</a>
+                <a class="navbar-brand" href="{% url 'djangoapp:index' %}">Home</a>
             </div>
-            <ul class="nav navbar-nav navbar-right list-group-horizontal">
-                <li>
-                    <a class="btn btn-link" href="{% url 'djangoapp:about' %}">About Us</a>
-                    <a class="btn btn-link" href="{% url 'djangoapp:contact' %}">Contact Us</a>
-                </li>
+            <ul class="nav navbar-nav navbar-right">
                 {% if user.is_authenticated %}
                 <li>
                     <a class="btn btn-link" href="#">{{ user.first_name }}({{ user.username }})</a>
@@ -49,8 +37,24 @@
         </div>
     </nav>
 
-    <!--Add a dealer table here -->
+    <!-- Stylize Login form -->
+    <form action="{% url 'djangoapp:login' %}" method="post">
+        {% csrf_token %}
+        <div class="container"> <!--Style root div with .container class -->
+            <h1>Login</h1>
+            <div class="form-group"> <!--Style second div with .form-group class -->
+              <label for="username"><b>User Name</b></label>
+              <input id="username" class = "form-control" type="text" placeholder="Enter User Name: " name="username" required> <!--Style input with .form-control class -->
+              <label for="psw"><b>Password</b></label>
+              <input id="psw" class = "form-control" type="password"  placeholder="Enter Password: " name="psw" required> <!--Style input with .form-control class -->
+            </div>
+            {% if message %}
+              <div class="alert alert-warning"> <!--Style the message paragraph with .alert and .alert-warning class -->
+                {{ message }}
+              </div>
+            {% endif %}
+            <button class="btn btn-primary" type="submit">Login</button> <!--Style button with .btn and .btn-primary class -->
+        </div>
+    </form>
 
 </body>
-
-</html>
