--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -49,6 +49,7 @@
         </div>
     </nav>
 
+    {% if user.is_authenticated %}
     <table class="table" id="table">
         <thead>
             <tr>
@@ -73,6 +74,7 @@
             {% endfor %}
         </tbody>
     </table>
+    {% endif %}
 </body>
 
 <script>
