--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -64,8 +64,8 @@
         <tbody>
             {% for dealer in dealership_list %}
                 <tr>
-                    <td>{{dealer.id}}</td>
-                    <td><a href="{% url 'djangoapp:dealer_details' dealer.id %}">{{dealer.full_name}}</a></td>
+                    <td>{{dealer.dealer_id}}</td>
+                    <td><a href="./dealer_details/{{dealer.dealer_id}}/">{{dealer.full_name}}</a></td>
                     <td>{{dealer.city}}</td>
                     <td>{{dealer.address}}</td>
                     <td>{{dealer.zip}}</td>
@@ -78,9 +78,9 @@
 </body>
 
 <script>
-  $(function() {
-    $('#table').bootstrapTable()
-  })
+    $(function() {
+        $('#table').bootstrapTable()
+    });
 </script>
 
 </html>
