--- a/server/djangoapp/templates/djangoapp/dealer_details.html
+++ b/server/djangoapp/templates/djangoapp/dealer_details.html
@@ -4,15 +4,59 @@
     <meta charset="UTF-8">
     <title>Dealership Review</title>
     {% load static %}
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 
     <body>
 
-    <!--Add a nav bar here -->
+    <!-- Navigation bar -->
+    <nav class="navbar navbar-light bg-light">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                  <a class="navbar-brand" href="#">Dealer Review</a>
+            </div>
+            <ul class="nav navbar-nav navbar-right list-group-horizontal">
+                <li>
+                    <a class="btn btn-link" href="{% url 'djangoapp:about' %}">About Us</a>
+                    <a class="btn btn-link" href="{% url 'djangoapp:contact' %}">Contact Us</a>
+                </li>
+                {% if user.is_authenticated %}
+                <li>
+                    <a class="btn btn-link" href="#">{{ user.first_name }}({{ user.username }})</a>
+                    <a class="btn btn-link" href="{% url 'djangoapp:logout' %}">Logout</a>
+                </li>
+                {% else %}
+                <li>
+                    <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
+                        {% csrf_token %}
+                        <div class="input-group">
+                            <input type="text" class="form-control" placeholder="Username" name="username" >
+                            <input type="password" class="form-control" placeholder="Username" name="psw" >
+                            <button class="btn btn-primary" type="submit">Login</button>
+                            <a class="btn btn-link" href="{% url 'djangoapp:registration' %}">Sign Up</a>
+                        </div>
+                    </form>
+                </li>
+                {% endif %}
+            </ul>
+        </div>
+    </nav>
 
-    <!-- Add reviews as cards -->
-
-    </body>
+    <h1>Reviews for <b>{{dealer_name}}</b></h1>
+    <div class="container-fluid">
+        <div class="card-columns">
+            {% for review in review_list %}
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-left" src="{{MEDIA_URL}}/emoji/{{review.sentiment_type}}.png" style="width: 3rem; height: 3rem">
+                <div class="card-body">
+                    <h5 class="card-title">{{review.car_make}}, {{review.car_model}}</h5>
+                    <h5 class="card-title">{{review.car_year}}</h5>
+                    <p class="card-content">{{review.review}}<p>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+    </div>
+</body>
 
 </html>
