--- a/server/djangoapp/templates/djangoapp/dealer_details.html
+++ b/server/djangoapp/templates/djangoapp/dealer_details.html
@@ -57,7 +57,7 @@
             {% endfor %}
         </div>
     </div>
-    <a class="btn btn-link" href="./submit_review/{{dealer_id}}/{{dealer_name}}">Add review</a>
+    <a class="btn btn-link" href="./add_review/{{dealer_id}}/{{dealer_name}}">Add review</a>
 </body>
 
 </html>
