--- a/server/djangoapp/templates/djangoapp/add_review.html
+++ b/server/djangoapp/templates/djangoapp/add_review.html
@@ -11,18 +11,68 @@
 
 </head>
     <body>
-        <form action="{% url 'djangoapp:add_review' dealer_id dealer_name %}">
-            <label for="content">Enter the review content:</label>
-            <textarea class="form-control" id="content" name="content" rows="2" required></textarea>
-            <label for="purchasecheck">Has purchased the car from {{dealer_name}}?<span style="color: darkgray;">(select purchased car information below if checked)</span></label>
-            <input class="form-check-input" type="checkbox" name="purchasecheck" id="purchasecheck">
-            <label for="car">Select your car (model-make-year):</label>
-            <select name="car" id="car" class="form-select" required>
-                {% for car in cars %}
-                <option selected value={{car.id}}>{{car.name}}-{{car.make.name}}-{{ car.year|date:"Y" }}</option>
-                {% endfor %}
-           </select>
-           <input class="date-own form-control" type="text" name="purchasedate" id="purchasedate">
-        </form>
+        <!-- Navigation bar -->
+        <nav class="navbar navbar-light bg-light">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#">Dealer Review</a>
+                </div>
+                <ul class="nav navbar-nav navbar-right list-group-horizontal">
+                    <li>
+                        <a class="btn btn-link" href="{% url 'djangoapp:about' %}">About Us</a>
+                        <a class="btn btn-link" href="{% url 'djangoapp:contact' %}">Contact Us</a>
+                    </li>
+                    {% if user.is_authenticated %}
+                    <li>
+                        <a class="btn btn-link" href="#">{{ user.first_name }}({{ user.username }})</a>
+                        <a class="btn btn-link" href="{% url 'djangoapp:logout' %}">Logout</a>
+                    </li>
+                    {% else %}
+                    <li>
+                        <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
+                            {% csrf_token %}
+                            <div class="input-group">
+                                <input type="text" class="form-control" placeholder="Username" name="username" >
+                                <input type="password" class="form-control" placeholder="Username" name="psw" >
+                                <button class="btn btn-primary" type="submit">Login</button>
+                                <a class="btn btn-link" href="{% url 'djangoapp:registration' %}">Sign Up</a>
+                            </div>
+                        </form>
+                    </li>
+                    {% endif %}
+                </ul>
+            </div>
+        </nav>
+
+        <div class="d-flex justify-content-center align-items-center container">
+            <form action="{% url 'djangoapp:add_review' dealer_id dealer_name %}" method="post" style="width: 67%">
+                <div class="form-group">
+                    <label for="content">Enter the review content:</label>
+                    <textarea class="form-control" id="content" name="content" rows="2" required></textarea>
+                </div>
+                <div class="form-group">
+                    <input class="form-check-input" type="checkbox" name="purchasecheck" id="purchasecheck">
+                    <label for="purchasecheck">Has purchased the car from {{dealer_name}}?<span style="color: darkgray;">(select purchased car information below if checked)</span></label>
+                </div>
+                <div class="form-group">
+                    <label for="car">Select your car (make-model-year):</label>
+                    <select name="car" id="car" class="form-select" required>
+                        {% for car in cars %}
+                        <option selected value={{car.id}}>{{car.car_make.name}}-{{car.name}}-{{ car.year|date:"Y" }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="purchasedate">Select your purchase date:</label>
+                    <input class="form-control" type="date" name="purchasedate" id="purchasedate">
+                </div>
+                <input class="btn btn-success" type="submit" value="Submit">
+            </form>
+        </div>
     </body>
+    <script type="text/javascript">
+        $('.date-own').datepicker({
+           format: 'mm/dd/yyyy'
+         });
+   </script>
 </html>
